feat: visual nuts js

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "workspaces": [
     "fullstacklabs-node",
     "fullstacklabs-react",
-    "matilda-node"
+    "matilda-node",
+    "visual-nuts-js"
   ]
 }
